--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="cursor"></div>
 
 <audio id="bgm" loop>
-  <source src="kotainitaksamatanpamu.mp3" type="audio/mpeg">
+  <source src="kotainitaksamatanpamu(1).mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -122,4 +122,5 @@ document.body.addEventListener("click", () => {
 
 </body>
 </html>
+
 
