Remove cursor tracking and typing effects
Removed cursor tracking and text typing functionality.

--- a/index.html
+++ b/index.html
@@ -1,87 +1,43 @@
-<script>
-const cursor = document.getElementById('cursor');
-document.addEventListener('mousemove', e => {
-  cursor.style.left = e.clientX + 'px';
-  cursor.style.top = e.clientY + 'px';
-});
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<title>Happy Birthday</title>
 
-const phrases = [
-  "Happy Birthday sayangkuu",
-  "sekarang ulang tahun yang ke berapa yaaa?",
-  "udah cukup umur tuh buat nikahin akuu",
-  "bercandaaa",
-  "semogaa panjang umurr...",
-  "sehat selaluu...",
-  "semoga semua impian kaka tercapai yaa...",
-  "dan semoga di umur kaka yang sekarang sampai seterusnya",
-  "bisa lebih dewasa lagi...",
-  "harus bisa jaga dirii",
-  "semangatt yaa kuliah nya",
-  "semogaa semua urusan kaka dimudahkan",
-  "aamiin...",
-  "gimana tahun ini?",
-  "bahagia ngga?",
-  "semoga hari hari kaka ditahun depan lebih bahagia lagi yaa",
-  "walaupun tanpa aku",
-  "tapi semoga kita masih sama sama sampai seterusnyaa",
-  "kaka jangan keseringan main game yaa",
-  "nanti kalau tangannya sakit ijab kabul sama papa aku gimana?",
-  "tapi...",
-  "aku bingung deh sama asronot",
-  "soalnya mereka harus pergi ke luar angkasa buat liat dunia",
-  "padahal aku bisa liat duniaku cuma liat kaka ajaaa",
-  "kaka waktu kecil suka nonton doraemon ngga?",
-  "doraemon kan bisa ngeluarin apa aja dari kantongnya",
-  "tapi gabisa ngeluarin kaka dari pikiran akuu hihii",
-  "cara ngeja kata menu itu gimana ya ka?",
-  "me",
-  "n",
-  "u ngga sih?",
-  "oiyaaa",
-  "makasi ya kaka...",
-  "udah sempatin buat ngobrol sama aku walaupun sibukk",
-  "makasii udah selalu ada buat akuu",
-  "i love u...",
-  "so much"
-];
-
-const textDiv = document.getElementById("text");
-const audio = document.getElementById("bgm");
-
-let index = 0;
-let audioUnlocked = false;
-
-function typeText(txt, i = 0) {
-  if (i < txt.length) {
-    textDiv.innerHTML += txt.charAt(i);
-    setTimeout(() => typeText(txt, i + 1), 40);
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    background: black;
+    color: white;
+    font-family: 'Courier New', monospace;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
-}
 
-function showNext() {
-  textDiv.innerHTML = "";
-  typeText(phrases[index]);
-  index = (index + 1) % phrases.length;
-}
-
-/* klik untuk unlock audio & ganti teks */
-document.body.addEventListener("click", () => {
-  if (!audioUnlocked) {
-    audio.muted = false;
-    audio.volume = 1;
-
-    audio.play().then(() => {
-      console.log("Audio sudah diputar setelah klik.");
-    }).catch(err => {
-      console.warn("Audio gagal diputar:", err);
-    });
-
-    audioUnlocked = true;
+  #text {
+    font-size: 24px;
+    max-width: 80%;
+    line-height: 1.6;
+    margin-bottom: 20px;
   }
-  
-  showNext();
-});
-</script>
+</style>
+</head>
+
+<body>
+
+<div id="text">TES AUDIO — pencet play ya</div>
+
+<!-- AUDIO TES -->
+<audio controls>
+  <source src="kotainitaksamatanpamu(1).mp3" type="audio/mpeg">
+</audio>
+
+</body>
+</html>
 
 
 
