Modify audio source and text in index.html
Updated audio source and text content.

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 
 <body>
 
-<div id="text">TES AUDIO — klik play yaaa..</div>
+<div id="text">klik play yaaa..</div>
 
 <!-- AUDIO TES -->
 <audio controls>
-  <source src="kotainitaksamatanpamu.mp3" type="audio/mpeg">
+  <source src="audio.mp3" type="audio/mpeg">
 </audio>
 
 </body>
 </html>
+
 
 
 
